package fr.univlille.labyrinth.model.save;

// Cette classe donne tous les types de vues de labyrinthe possibles pour un défi, conformément au sujet
public enum ViewType {
    NORMAL,
    LOCAL,
    EXPLORATION;
}
